# rust-winui

./: .gitattributes  .gitignore  Cargo.toml  LICENSE
.cargo/: config.toml
bindgen/src/: main.rs
rustapp/: Cargo.toml  app.manifest  build.rs
rustapp/src/: app.rs  main.rs  main_window.rs  winrt.rs  winui.rs
src/: app.rs  main.rs  main_page.rs  main_window.rs  utils.rs
winappsdk/: Cargo.toml  build.rs
winappsdk/src/: bootstrap.rs  lib.rs
winappsdk/src/bindings/: Microsoft.rs
