[package]
name = "rustapp"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.22", default-features = false }
simple_logger = "5.0.0"
winappsdk = { version = "0.1.0", path = "../winappsdk" }
windows = { version = "0.58.0", features = ["Foundation", "UI_Core", "Win32_Security", "Win32_Storage_Packaging_Appx", "Win32_System_WinRT", "implement"] }
windows-core = "0.58.0"

[build-dependencies]
embed-manifest = "1.4.0"
