[package]
name = "winappsdk"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58.0", features = [
    "ApplicationModel",
    "ApplicationModel_Activation",
    "ApplicationModel_Background",
    "ApplicationModel_Contacts",
    "ApplicationModel_Core",
    "ApplicationModel_DataTransfer",
    "ApplicationModel_DataTransfer_DragDrop",
    "ApplicationModel_DataTransfer_DragDrop_Core",
    "Devices_Geolocation",
    "Devices_Input",
    "Foundation",
    "Foundation_Collections",
    "Foundation_Numerics",
    "Globalization",
    "Globalization_NumberFormatting",
    "Graphics_DirectX",
    "Graphics_Effects",
    "Graphics_Imaging",
    "Graphics_Printing",
    "Media",
    "Media_Casting",
    "Media_Playback",
    "Security",
    "Security_Cryptography",
    "Security_Cryptography_Certificates",
    "Storage",
    "Storage_Streams",
    "System",
    "UI",
    "UI_Composition",
    "UI_Core",
    "UI_Text",
    "implement"
] }
windows-core = "0.58.0"
windows-targets = "0.52.6"

[build-dependencies]
memmap2 = "0.9.5"
windows-bindgen = { git = "https://github.com/microsoft/windows-rs.git", tag = "0.60.0" }
