[package]
name = "winappsdk"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58.0", features = [
    "ApplicationModel_Activation",
    "ApplicationModel_Background",
    "ApplicationModel_Contacts",
    "ApplicationModel_Core",
    "ApplicationModel_DataTransfer_DragDrop",
    "Devices_Geolocation",
    "Devices_Input",
    "Foundation_Collections",
    "Foundation_Numerics",
    "Globalization_NumberFormatting",
    "Graphics_Effects",
    "Graphics_Imaging",
    "Graphics_Printing",
    "Media_Casting",
    "Media_Playback",
    "Storage_Streams",
    "System",
    "UI_Composition",
    "UI_Core",
    "UI_Text",
    "Win32_Security",
    "Win32_Storage_Packaging_Appx",
    "Win32_System_WinRT",
    "implement"
] }
windows-core = "0.58.0"
windows-targets = "0.52.6"
